# dotdashair

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
po/: .gitignore  Makevars  POTFILES.in
settings/: .gitignore  Makefile.am  default_charset.cfg  org.hck.dotdashair.gschema.xml  org.hck.dotdashair.gschema.xml.in
src/: .gitignore  Makefile.am  dda_application.c  dda_application.h  dda_backend.h  dda_backend.vala  dda_infobar.vala  dda_input_stream.c  dda_input_stream.h  dda_macros.h  dda_main.c  dda_morse_charset.c  dda_morse_charset.h  dda_morse_converter.c  dda_morse_converter.h  dda_morse_converter_ch2co.c  dda_morse_converter_co2ch.c  dda_morse_converter_private.h  dda_output_stream.c  dda_output_stream.h  dda_override.h  dda_settings.h  dda_settings.vala  dda_settings_window.vala  dda_settings_windows.h  dda_stream.c  dda_stream.h  dda_streams.h  dda_streams.vala  dda_textbox.h  dda_textbox.vala  dda_window.h  dda_window.vala
src/portaudio/: .gitignore  Makefile.am  pa_backend.c  pa_backend.h  pa_backend_device.c  pa_backend_device.h  pa_enums.c.template  pa_error.c  pa_error.h
src/resources/: .gitignore  Makefile.am  dda_resources.gresources.xml
src/resources/ui/: infobar.ui  settings.ui  textbox.ui  window.ui
src/vapi/: Makefile.am  config.vapi  dda-override.vapi  dda.deps  dda.vapi
